# poly-roots

./: poly-roots.cabal
app/: PolyRoots.hs
